--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "standard": "^17.0.0",
     "typescript": "^4.9.3",
