--- a/back/package.json
+++ b/back/package.json
@@ -14,17 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.2"
   },
   "eslintConfig": {
-    "extends": ["./node_modules/ts-standard/eslintrc.json"],
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ],
     "parserOptions": {
       "project": "./tsconfig.json"
     }
